// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput handles bottom placed error 1`] = `
<input
  aria-describedby="1_error"
  aria-invalid={true}
  className="ds-c-field ds-c-field--error"
  id="1"
  name="spec-field"
  type="text"
/>
`;

exports[`TextInput is a textarea 1`] = `
<textarea
  aria-invalid={false}
  className="ds-c-field"
  id="1"
  name="spec-field"
/>
`;

exports[`TextInput is an input field 1`] = `
<input
  aria-invalid={false}
  className="ds-c-field"
  id="1"
  name="spec-field"
  type="text"
/>
`;
